<resources>


    <!-- Spanish / English Support -->
    <string name="app_name">Notes</string>
    <string name="note_list_header">Mis Notas</string>
    <string name="switch_to_add_button">+ Agregar Nota</string>
    <string name="add_note_header">Personaliza tu nota</string>
    <string name="edit_note_title">Ingresa un título</string>
    <string name="edit_note_description">Ingresa una descripción</string>
    <string name="edit_note_tag">Tipo de etiqueta</string>
    <string name="save_note_button">Guardar Nota</string>
    <string name="dropdown_option_cenfotec">Cenfotec</string>
    <string name="dropdown_option_home">Home</string>
    <string name="dropdown_option_work">Work</string>
    <string name="add_note_message"> was added</string>
    <string name="delete_note_message"> was deleted</string>


    <!-- Arrays -->
    <string-array name="tags">
        <item>@string/dropdown_option_cenfotec</item>
        <item>@string/dropdown_option_home</item>
        <item>@string/dropdown_option_work</item>
    </string-array>
</resources>